# crossfire-nexxus

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.devcontainer/docker-entrypoint-initdb.d/: 001-user.sql
.github/workflows/: docker.yml  pyright.yml  ruff.yml  test.yml
about/license/: index.html
docker/traefik/: compose.yml
docker/traefik/config/: traefik.yml
docker/traefik/config/dynamic/: dokuwiki.yml  nexxus-djano.yml
docs/configurations/: index.md
docs/getting-started/: index.md
scripts/: write_version.sh
search/: search_index.json
src/: version.json
src/core/: settings.py  urls.py
src/nexxus/: admin.py  api.py  forms.py  models.py  schemas.py  security.py  urls.py  views.py
src/nexxus/migrations/: 0001_initial.py  0002_alter_server_last_update.py  0003_blacklist_ip_address.py  0004_alter_server_port.py
src/nexxus/static/css/: crossfire.css  main.css  rotated-th.css
src/nexxus/templates/: base.html  head_css.html  js.html  legacy_client.html  legacy_html.html  server_list.html
src/nexxus/tests/: README.md  curl-metaserver-post.sh  factories.py  requests.http  test_api.py  test_forms.py  test_models.py  test_security.py  test_views.py
src/scripts/: nexxus.sh
tests/: metaserver.http
tools/: GPT-token.py
tools/logger/: logger.py
