[project]
name = "Nexxus_Ninja"
version = "2026.03.23"
description = "Crossfire is an open source, cooperative multiplayer graphical RPG and adventure game."

keywords = [
    "crossfire",
    "metaserver",
    "linux game",
    "X Windows",
    "graphical arcade game",
    "adventure game",
    "gtk",
    "java",
]

authors = [{ name = "Bob Tanner", email = "tanner@real-time.com" }]

maintainers = [
    { name = "Bob Tanner", email = "tanner@real-time.com" },
    { name = "Rick Tanner", email = "leaf@real-time.com" },
]

requires-python = ">=3.13,<3.15"
readme = "README.md"
license = { file = "LICENSE" }

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
]

dependencies = [
    "Django>=5.2,<6.0",
    "django-easy-health-check",
    "django-ninja",
    "django-ninja-extra",
    "django-extensions",
    "django-cors-headers",
    "environs",
    "mysqlclient",
    "whitenoise[brotli]",
    "gunicorn",
]

[dependency-groups]
dev = [
    "coverage",
    "debugpy",
    "django-coverage-plugin",
    "django-environ",
    "django-test-plus",
    "factory-boy",
    "faker",
    "git-filter-repo",
    "mkdocs-material>=9.5.50",
    "model-bakery",
    "pre-commit",
    "pylint-django",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-lazy-fixtures",
    "pytest-mock",
    "pytest-playwright",
    "requests",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://github.com/basictheprogram/crossfire-nexxus"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/basictheprogram/crossfire-nexxus.git"
Issues = "https://github.com/basictheprogram/crossfire-nexxus/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
